Perma MinGW [Tier 2] /builds/worker/checkouts/gecko/ipc/glue/BackgroundParentImpl.cpp:1377:3: error: no matching function for call to object of type 'RequestCameraAccessResolver' (aka 'function<void (const mozilla::camera::CamerasAccessStatus &)>')
Categories
(Firefox Build System :: General, defect, P5)
Tracking
(firefox-esr115 unaffected, firefox120 unaffected, firefox121 unaffected, firefox122 fixed)
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox120 | --- | unaffected |
firefox121 | --- | unaffected |
firefox122 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: jgrulich)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: smolnar [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=438296542&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/ZTBsEOxlQ2qO9ICQqJ-mFw/runs/0/artifacts/public/logs/live_backing.log
In file included from /builds/worker/workspace/obj-build/dist/include/mozilla/BaseProfilerMarkersPrerequisites.h:30:
[task 2023-11-30T12:03:59.506Z] 12:03:59 WARNING - /builds/worker/workspace/obj-build/dist/include/mozilla/BaseProfilerState.h:284:17: warning: 'dllimport' attribute ignored on inline function [-Wignored-attributes]
[task 2023-11-30T12:03:59.506Z] 12:03:59 INFO - 284 | [[nodiscard]] MFBT_API static mozilla::Maybe<uint32_t> FeaturesIfActive() {
[task 2023-11-30T12:03:59.506Z] 12:03:59 INFO - | ^
[task 2023-11-30T12:03:59.506Z] 12:03:59 INFO - /builds/worker/workspace/obj-build/dist/include/mozilla/Types.h:101:24: note: expanded from macro 'MFBT_API'
[task 2023-11-30T12:03:59.506Z] 12:03:59 INFO - 101 | # define MFBT_API MOZ_IMPORT_API
[task 2023-11-30T12:03:59.506Z] 12:03:59 INFO - | ^
[task 2023-11-30T12:03:59.506Z] 12:03:59 INFO - /builds/worker/workspace/obj-build/dist/include/mozilla/Types.h:63:39: note: expanded from macro 'MOZ_IMPORT_API'
[task 2023-11-30T12:03:59.506Z] 12:03:59 INFO - 63 | # define MOZ_IMPORT_API __declspec(dllimport)
[task 2023-11-30T12:03:59.506Z] 12:03:59 INFO - | ^
[task 2023-11-30T12:03:59.506Z] 12:03:59 ERROR - /builds/worker/checkouts/gecko/ipc/glue/BackgroundParentImpl.cpp:1377:3: error: no matching function for call to object of type 'RequestCameraAccessResolver' (aka 'function<void (const mozilla::camera::CamerasAccessStatus &)>')
[task 2023-11-30T12:03:59.506Z] 12:03:59 INFO - 1377 | aResolver(NS_ERROR_NOT_IMPLEMENTED);
[task 2023-11-30T12:03:59.507Z] 12:03:59 INFO - | ^~~~~~~~~
[task 2023-11-30T12:03:59.507Z] 12:03:59 INFO - /builds/worker/fetches/clang/bin/../x86_64-w64-mingw32/include/c++/v1/__functional/function.h:1067:31: note: candidate function not viable: no known conversion from 'const nsresult' to 'const mozilla::camera::CamerasAccessStatus' for 1st argument
[task 2023-11-30T12:03:59.507Z] 12:03:59 INFO - 1067 | _LIBCPP_HIDE_FROM_ABI _Rp operator()(_ArgTypes...) const;
[task 2023-11-30T12:03:59.507Z] 12:03:59 INFO - | ^ ~~~~~~~~~
[task 2023-11-30T12:03:59.507Z] 12:03:59 INFO - 3 warnings and 1 error generated.
[task 2023-11-30T12:03:59.507Z] 12:03:59 ERROR - gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:688: BackgroundParentImpl.o] Error 1
[task 2023-11-30T12:03:59.507Z] 12:03:59 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/ipc/glue'
[task 2023-11-30T12:03:59.511Z] 12:03:59 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/layout/inspector'
[task 2023-11-30T12:03:59.511Z] 12:03:59 INFO - mkdir -p '.deps/'
[task 2023-11-30T12:03:59.511Z] 12:03:59 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/layout/inspector'
[task 2023-11-30T12:03:59.518Z] 12:03:59 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/layout/inspector'
[task 2023-11-30T12:03:59.519Z] 12:03:59 INFO - layout/inspector/Unified_cpp_layout_inspector0.o
[task 2023-11-30T12:03:59.519Z] 12:03:59 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/layout/inspector'
[task 2023-11-30T12:04:00.160Z] 12:04:00 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/layout/base'
[task 2023-11-30T12:04:00.163Z] 12:04:00 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/x86_64-w64-mingw32-clang++ -o Unified_cpp_layout_base1.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DUNICODE -D_UNICODE -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -D_SECURE_ATL -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DWIN32 -D_WIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/layout/base -I/builds/worker/workspace/obj-build/layout/base -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/layout/forms -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/mathml -I/builds/worker/checkouts/gecko/layout/painting -I/builds/worker/checkouts/gecko/layout/printing -I/builds/worker/checkouts/gecko/layout/style -I/builds/worker/checkouts/gecko/layout/tables -I/builds/worker/checkouts/gecko/layout/xul -I/builds/worker/checkouts/gecko/layout/xul/tree -I/builds/worker/checkouts/gecko/docshell/base -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/html -I/builds/worker/checkouts/gecko/dom/svg -I/builds/worker/checkouts/gecko/dom/xul -I/builds/worker/checkouts/gecko/view -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -fno-sized-deallocation -fno-aligned-new -fms-extensions -fcrash-diagnostics-dir=/builds/worker/artifacts -D_HAS_EXCEPTIONS=0 -fno-exceptions -Wno-incompatible-ms-struct -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wenum-compare-conditional -Wenum-float-conversion -Wno-error=deprecated -Wno-error=deprecated-anon-enum-enum-conversion -Wno-error=deprecated-enum-enum-conversion -Wno-error=deprecated-pragma -Wno-error=deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-unknown-warning-option -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/Unified_cpp_layout_base1.o.pp Unified_cpp_layout_base1.cpp
[task 2023-11-30T12:04:00.165Z] 12:04:00 INFO - In file included from Unified_cpp_layout_base1.cpp:2:
[task 2023-11-30T12:04:00.165Z] 12:04:00 INFO - In file included from /builds/worker/checkouts/gecko/layout/base/ScrollStyles.cpp:8:
Updated•2 years ago
|
Comment 1•2 years ago
|
||
Jan, please take a look. Probably builds with --disable-webrtc are busted in general.
Assignee | ||
Comment 2•2 years ago
|
||
We changed resolve value type for camera access requests and this was
not updated in the non-WebRTC build.
Updated•2 years ago
|
Assignee | ||
Updated•2 years ago
|
Comment 4•2 years ago
|
||
Set release status flags based on info from the regressing bug 1844020
(In reply to Andreas Pehrson [:pehrsons] from comment #1)
Jan, please take a look. Probably builds with --disable-webrtc are busted in general.
Yes, they are, both our builds without webrtc failed (explicit disable on ppc64le, implicit on s390x). The proposed patch fixes the build.
Comment 6•2 years ago
|
||
bugherder |
Comment hidden (Intermittent Failures Robot) |
Description
•