Bug 1867509 - Fix build with disabled WebRTC support r=pehrsons

We changed resolve value type for camera access requests and this was
not updated in the non-WebRTC build.

Differential Revision: https://phabricator.services.mozilla.com/D195102